log
Wed, Mar 19, 2025  9:03:38 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:11:14 AM: 
 exercises.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:15: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int elem = first(L);
               ^~~~~
exercises.c:66:16: error: comparison between pointer and integer [-Werror]
    while (elem != NULL)
                ^~
exercises.c:69:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       elem = next(L);
            ^
exercises.c: In function 'eliminaElementos':
exercises.c:85:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int num = first(L);
              ^~~~~
exercises.c:86:15: error: comparison between pointer and integer [-Werror]
    while (num != NULL)
               ^~
exercises.c:89:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       else num = next(L);
                ^
exercises.c: In function 'copia_pila':
exercises.c:103:11: error: unused variable 'P_aux' [-Werror=unused-variable]
    Stack* P_aux = create_stack();
           ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d8a8bab
Wed, Mar 19, 2025  9:12:36 AM: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ad300ae
Wed, Mar 19, 2025  9:13:24 AM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
ada3e12
Wed, Mar 19, 2025  9:14:48 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:65:15: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int elem = first(L);
               ^~~~~
exercises.c:67:16: error: comparison between pointer and integer [-Werror]
    while (elem != NULL)
                ^~
exercises.c:70:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       elem = next(L);
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
95bd6b1
Wed, Mar 19, 2025  9:16:50 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:69:11: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       sum += elem;
           ^~
exercises.c:70:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elem = next(L);
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
4a602a9
Wed, Mar 19, 2025  9:17:23 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:69:11: error: invalid operands to binary + (have 'int *' and 'int *')
       sum += elem;
           ^~
exercises.c:70:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elem = next(L);
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
4099453
Wed, Mar 19, 2025  9:17:51 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:70:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       *elem = next(L);
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
ebfdd95
